tests/machine/x/cpp/string_contains.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

int main() {
	auto s = "catch";
	(cout << s.contains("cat"));
	(cout << s.contains("dog"));
	return 0;
}
